<resources>
    <string name="app_name">My Profile Layouts</string>
    <string name="settings">Settings</string>
    <string name="address">5295 Gaylord Walks Apk. 110</string>
    <string name="name">Smith Alvarado</string>
    <string name="profession">Graphic designer</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="account">Already hav an account?   Sign in</string>
    <string name="conditions">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="register">REGISTER</string>
    <string name="or">or</string>
    <string name="google">GOOGLE</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="profile">Fill out the profile and go to the application!</string>
    <string name="acquainted">Let\'s get acquainted</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="photo">Photo</string>
    <string name="e_mail"><font size="18">E-mail</font></string>
    <string name="user_name">Name</string>
    <string name="user_profession">Profession</string>
    <string name="user_address">Address</string>
    <string name="add_user_contacts">Add contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>

    <string name="add_username"><font size="18">Username</font></string>
    <string name="add_career"><font size="18">Career</font></string>
    <string name="add_email"><font size="18">Email</font></string>
    <string name="add_phone">Phone</string>
    <string name="add_address">Address</string>
    <string name="add_date_of_birth">Date of birth</string>

</resources>