<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_background"
    tools:context=".AuthActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_between_elements"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/account"
        android:textColor="@color/white_gray"
        android:textSize="@dimen/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_between_elements"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/conditions"
        android:textColor="@color/white_gray"
        android:textSize="@dimen/conditions"
        app:layout_constraintBottom_toTopOf="@id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_on_the_edges"
        android:layout_marginEnd="@dimen/margin_on_the_edges"
        android:layout_marginBottom="@dimen/padding_between_elements"
        android:background="@drawable/back_orange"
        android:text="@string/register"
        android:textColor="@color/white_gray"
        app:layout_constraintBottom_toTopOf="@id/conditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_between_elements"
        android:text="@string/or"
        android:textColor="@color/white_gray"
        android:textSize="@dimen/or"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Your comment-->

    <com.example.myprofilelayouts.customview.MyButtonView
        android:id="@+id/google"
        android:layout_width="0dp"
        android:layout_height="@dimen/google_height"
        android:layout_marginStart="@dimen/margin_on_the_edges"
        android:layout_marginEnd="@dimen/margin_on_the_edges"
        android:layout_marginBottom="@dimen/padding_between_elements"
        android:background="@color/white"
        android:text="@string/google"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_on_the_edges"
        android:layout_marginBottom="@dimen/remember_me_marginBottom"
        android:text="@string/remember_me"
        android:textColor="@color/white_gray"
        app:layout_constraintBottom_toTopOf="@id/google"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_on_the_edges"
        android:layout_marginEnd="@dimen/margin_on_the_edges"
        android:layout_marginBottom="@dimen/padding_between_elements"
        android:hint="@string/password"
        android:textColorHint="@color/white_gray"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:helperText=""
        app:helperTextTextColor="@color/red"
        app:hintTextColor="@color/white_gray"
        app:layout_constraintBottom_toTopOf="@id/remember_me"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/white_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_on_the_edges"
        android:layout_marginEnd="@dimen/margin_on_the_edges"
        android:layout_marginBottom="@dimen/padding_between_elements"
        android:hint="@string/email"
        android:textColorHint="@color/white_gray"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:helperText=""
        app:helperTextTextColor="@color/red"
        app:hintTextColor="@color/white_gray"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/profile_marginBottom"
        android:text="@string/profile"
        android:textColor="@color/white_gray"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/acquainted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/acquainted_marginBottom"
        android:text="@string/acquainted"
        android:textColor="@color/white_gray"
        android:textSize="@dimen/acquainted_textSize"
        app:layout_constraintBottom_toTopOf="@id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
